// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/ChatMessage renders correctly  isNotValid time 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "flexDirection": "row",
      "maxWidth": "90%",
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#FFF",
        "borderBottomLeftRadius": 0,
        "borderBottomRightRadius": 15,
        "borderRadius": 15,
        "marginVertical": 6,
      }
    }
  >
    <View
      style={
        {
          "paddingBottom": 6,
          "paddingHorizontal": 15,
          "paddingTop": 12,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#444B5A",
              "fontFamily": "Inter-Regular",
              "fontSize": 21,
              "lineHeight": 27,
              "minHeight": 27,
            },
            undefined,
          ]
        }
      >
        message
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "flex-end",
          "paddingBottom": 12,
          "paddingHorizontal": 9,
        }
      }
    />
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatMessage renders correctly isMe 1`] = `
<View
  style={
    {
      "alignSelf": "flex-end",
      "flexDirection": "row",
      "maxWidth": "90%",
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#2B78EE",
        "borderBottomLeftRadius": 15,
        "borderBottomRightRadius": 0,
        "borderRadius": 15,
        "marginVertical": 6,
      }
    }
  >
    <View
      style={
        {
          "paddingBottom": 6,
          "paddingHorizontal": 15,
          "paddingTop": 12,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#FFF",
              "fontFamily": "Inter-Regular",
              "fontSize": 21,
              "lineHeight": 27,
              "minHeight": 27,
            },
            undefined,
          ]
        }
      >
        message
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "flex-end",
          "paddingBottom": 12,
          "paddingHorizontal": 9,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "rgba(255, 255, 255, 0.75)",
              "fontFamily": "Inter-Regular",
              "fontSize": 15,
              "lineHeight": 21,
              "minHeight": 21,
            },
            undefined,
          ]
        }
      >
        12:12
      </Text>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatMessage renders correctly isMe image 1`] = `
<View
  style={
    {
      "alignSelf": "flex-end",
      "flexDirection": "row",
      "maxWidth": "90%",
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#2B78EE",
        "borderBottomLeftRadius": 15,
        "borderBottomRightRadius": 0,
        "borderRadius": 15,
        "marginVertical": 6,
      }
    }
  >
    <View
      style={
        [
          {
            "maxHeight": 222,
            "maxWidth": 222,
            "minHeight": 193.5,
            "minWidth": 193.5,
          },
          {
            "margin": 6,
          },
        ]
      }
    >
      <Image
        source={
          {
            "uri": "https://vraki.net/sites/default/files/inline/images/30_55.jpg",
          }
        }
        style={
          {
            "maxHeight": 222,
            "maxWidth": 222,
            "minHeight": 193.5,
            "minWidth": 193.5,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "flex-end",
          "paddingBottom": 12,
          "paddingHorizontal": 9,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "rgba(255, 255, 255, 0.75)",
              "fontFamily": "Inter-Regular",
              "fontSize": 15,
              "lineHeight": 21,
              "minHeight": 21,
            },
            undefined,
          ]
        }
      >
        12:12
      </Text>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatMessage renders correctly isMe image number two 1`] = `
<View
  style={
    {
      "alignSelf": "flex-end",
      "flexDirection": "row",
      "maxWidth": "90%",
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#2B78EE",
        "borderBottomLeftRadius": 15,
        "borderBottomRightRadius": 0,
        "borderRadius": 15,
        "marginVertical": 6,
      }
    }
  >
    <View
      style={
        [
          {
            "maxHeight": 222,
            "maxWidth": 222,
            "minHeight": 193.5,
            "minWidth": 193.5,
          },
          {
            "margin": 6,
          },
        ]
      }
    >
      <Image
        source={42}
        style={
          {
            "maxHeight": 222,
            "maxWidth": 222,
            "minHeight": 193.5,
            "minWidth": 193.5,
          }
        }
      />
    </View>
    <View
      style={
        {
          "alignSelf": "flex-end",
          "paddingBottom": 12,
          "paddingHorizontal": 9,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "rgba(255, 255, 255, 0.75)",
              "fontFamily": "Inter-Regular",
              "fontSize": 15,
              "lineHeight": 21,
              "minHeight": 21,
            },
            undefined,
          ]
        }
      >
        12:12
      </Text>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatMessage renders correctly isNotMe 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "flexDirection": "row",
      "maxWidth": "90%",
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#FFF",
        "borderBottomLeftRadius": 0,
        "borderBottomRightRadius": 15,
        "borderRadius": 15,
        "marginVertical": 6,
      }
    }
  >
    <View
      style={
        {
          "paddingBottom": 6,
          "paddingHorizontal": 15,
          "paddingTop": 12,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#444B5A",
              "fontFamily": "Inter-Regular",
              "fontSize": 21,
              "lineHeight": 27,
              "minHeight": 27,
            },
            undefined,
          ]
        }
      >
        message
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "flex-end",
          "paddingBottom": 12,
          "paddingHorizontal": 9,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#9BA1B0",
              "fontFamily": "Inter-Regular",
              "fontSize": 15,
              "lineHeight": 21,
              "minHeight": 21,
            },
            undefined,
          ]
        }
      >
        12:12
      </Text>
    </View>
  </View>
</View>
`;
